<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/profile_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileEmail" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:enabled="false" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/profile_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileUsername" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/profile_text_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileAge" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="number"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/profile_text_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileHeight" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="number"
                android:hint="cm"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/profile_text_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileWeight" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="number"
                android:hint="kg"
                android:enabled="false" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/profile_update_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_update"
            android:textStyle="bold" />

        <Button
            android:id="@+id/profile_save_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_save"
            android:textStyle="bold"
            tools:clickable="false" />

    </LinearLayout>
</LinearLayout>